# streaming-kafka-sim

./: .env  .gitignore  README.md  package.json  pnpm-lock.yaml  requirements.in  requirements.txt  turbo.json
apps/data-ui/: .gitignore  package.json  turbo.json  vite.config.ts
apps/data-ui/src/: App.css  (+2 more)
data-access/: alembic.ini  pyproject.toml
data-access/alembic/: env.py
data-access/alembic/versions/: 2025_03_27_1153-74e7b0c7ff08_create_a_table_to_store_raw_log_jsons.py  2025_03_27_1646-8d3215844610_adds_raw_json_b64_column_to_raw_dbinfo.py  2025_04_11_1634-2c4db5a93372_adds_log_dl_reg.py
data-access/db/: __init__.py
data-access/db/core/: database.py
data-access/db/models/: __init__.py  registry.py
data-access/db/repositories/: __init__.py  dbinfo.py  registry.py
db/: MANIFEST.in  __init__.py  database.py  pyproject.toml
db/alembic/: env.py
db/alembic/versions/: 2025_03_27_1153-74e7b0c7ff08_create_a_table_to_store_raw_log_jsons.py  2025_03_27_1646-8d3215844610_adds_raw_json_b64_column_to_raw_dbinfo.py  2025_04_11_1634-2c4db5a93372_adds_log_dl_reg.py  2025_04_12_1624-b1b50464b40e_adds_new_raw_dbinfo.py
db/core/: __init__.py  database.py
db/models/: __init__.py  dbinfo.py  registry.py  transformed_data.py
db/repositories/: __init__.py  dbinfo.py  registry.py
dbt_analytics/: dbt_project.yml
docs/: ypr-docs-dockyard-guide.md
infrastructure/: .gitignore
infrastructure/elasticache/: Makefile  README.md  cloudwatch.tf  main.tf  outputs.tf  parameter_group.tf  variables.tf
log-foundry/: .gitignore  README.md  pyproject.toml  requirements.in  requirements.txt
log-foundry/log_foundry/: __init__.py
log-foundry/log_foundry/parser/: __init__.py  base_parser.py  dataframe_helpers.py  px4_typecast.py
log-foundry/tests/: test_base_parser.py  test_typecasts.py
orchestration/: README.md  requirements.txt
orchestration/dags/: download_px4_logs.py  emr_submit.py  test01.py
orchestration/emr_jobs/: deploy_emr.py  download_px4_logs.py  install-dependencies.sh  job_px4.py  simple-parallel-task.py
orchestration/scripts/: create_folders.sh  deploy.sh  download_ec2_info.sh  emr-test-functions.ipynb  mwaa-api.ipynb  refresh_env.sh  set_airflow_env.ipynb  update_mwaa_env.sh
polling/: px4_dbinfo.py  px4_dbinfo_c.py
render-rig/: .gitignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
render-rig/cache/: store.py
render-rig/chart_engine/: base.py  manager.py
render-rig/depr_render_rig/: .gitignore  README.md  main.py
render-rig/flower_scraper/: mongo_scraper.py  mongo_scraper2.py  scraper.py  scraper2.py
render-rig/frontend/: .gitignore  index.html  package-lock.json  package.json
render-rig/infrastructure/: main.tf  outputs.tf  variables.tf
render-rig/logfoundry_bridge/: parser_adapter.py
render-rig/render_rig/: __init__.py  main.py
render-rig/render_rig2/: app.py  app_v2.py  logger.py
render-rig/samples/: async_api_call.py  cache_cli.py  call_chart_generator.py  check_cache.py  frontend_test.html  redis_cli_tool.py  redis_keys.py  render_chart_acceleration_raw_xyz.py  render_chart_power.py  render_rig2_session_test.py  stress_test_redis.py  test_chart_dispatcher.py  test_get_existing_chart.py  test_get_existing_log.py  test_log_chart_in_registry.py  test_lookup_chart_registry.py  test_lookup_log_registry.py  test_store_chart_in_s3.py
render-rig/scripts/: entrypoint.sh  generate-px4-registry-models.sh  generate-render-rig-registry-models.sh  pip-auth-codeartifact.sh  taint-ecs-resources.sh  upload_cloud_env_to_ssm.sh
scripts/: generate-models.sh  git-sweeper.sh  set-env.sh
scripts/cloud-db/: cloud-dev.env  refresh-env.sh
services/airflow/: Dockerfile  docker-compose.yml
services/graphql/: .gitignore  README.md  codegen.ts  package.json  schema.graphql  turbo.json
tools/skyhawk/: Makefile  pyproject.toml  requirements.txt
tools/skyhawk/commands/: ec2_commands.py  rds_commands.py
tools/skyhawk/repository/services/: s3_service.py
tools/skyhawk/skyhawk/: __init__.py  manage.py
tools/skyhawk/skyhawk/commands/: __init__.py  ec2_commands.py  emr_commands.py  rds_commands.py  s3_commands.py  security_commands.py
tools/skyhawk/skyhawk/repository/services/: ec2_service.py  emr_service.py  security_service.py
ulog-insights/: README.md  pyproject.toml  requirements.txt
ypr-core-logfoundry/: Makefile  pyproject.toml  requirements.in
ypr-core-logfoundry/tests/: test_base_parser.py
ypr-core-logfoundry/ypr_core_logfoundry/parser/: base_parser.py
ypr-data-connector/: Makefile  pyproject.toml  requirements.in  requirements.txt
ypr-data-connector/ypr_data_connector/: __init__.py
ypr-data-connector/ypr_data_connector/clients/: __init__.py  postgres_client.py
ypr-data-connector/ypr_data_connector/database_client/: base_client.py
ypr-log-foundry/: README.md  pyproject.toml  requirements.txt
(+217 files in other folders)
