[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db"
version = "0.1.0"
description = "Data access layer with models and repositories"
authors = [{ name = "Nikhil Soni", email = "nikhil@yawpitchroll.ai" }]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy",
    "tqdm",
    "psycopg2-binary"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["db*"]
