[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "db"
version = "0.1.0"
description = "Data access layer with models and repositories"
authors = [{ name = "Nikhil Soni", email = "nikhil@yawpitchroll.ai" }]
requires-python = ">=3.8"
dependencies = [
    "sqlalchemy"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["models", "repositories", "models.*", "repositories.*", "core", "core.*"]

[tool.setuptools.exclude-package-data]
"db" = [
    "alembic.ini",
    "alembic/*",
    "**/__pycache__",
    "scripts/*"
]
