[project]
name = "log_foundry"
version = "0.1.0"
description = "Log parsing and telemetry tooling for PX4 .ulg files"
authors = [{ name = "Nikhil", email = "nikhil@yawpitchroll.ai" }]
dependencies = ["pyulog", "pandas", "plotly", "dash"]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["log_foundry"]
exclude = ["data", "tests"]