[project]
name = "skyhawk"
version = "0.1.0"
description = "Skyhawk: Lightweight Tactical AWS CLI for EC2, RDS, EMR, and Security Operations"
authors = [
    { name = "Nikhil Soni", email = "soni.nikhil@outlook.com" }
]
dependencies = [
    "click>=8.0",
    "boto3>=1.28"
]

[project.scripts]
skyhawk = "skyhawk.manage:cli"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["skyhawk"]
